[gd_scene load_steps=8 format=3 uid="uid://bm2r1abfbj246"]

[ext_resource type="Script" path="res://SCENES/Campfire.gd" id="1_byg5l"]
[ext_resource type="Texture2D" uid="uid://y6nsy3hh4vql" path="res://ART/2 Campfire/2.png" id="1_dwr54"]
[ext_resource type="Texture2D" uid="uid://dan8ekqtjm2bl" path="res://ART/Light.png" id="2_anwes"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lhrt2"]
radius = 50.0

[sub_resource type="Animation" id="Animation_yu3to"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimationPlayer:root_node")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [NodePath("../HealingArea")]
}

[sub_resource type="Animation" id="Animation_fhw1b"]
resource_name = "fire"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimationPlayer:root_node")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [NodePath("../HealingArea")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7kejg"]
_data = {
"RESET": SubResource("Animation_yu3to"),
"fire": SubResource("Animation_fhw1b")
}

[node name="Area2D" type="Area2D"]
position = Vector2(541, 526)
script = ExtResource("1_byg5l")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(2, -5)
texture = ExtResource("1_dwr54")
hframes = 6

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-1, 0)
color = Color(0.769722, 0.197254, 0, 1)
energy = 2.16
texture = ExtResource("2_anwes")
texture_scale = 0.26

[node name="HealingArea" type="CollisionShape2D" parent="."]
position = Vector2(4, 4)
shape = SubResource("CircleShape2D_lhrt2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../HealingArea")
libraries = {
"": SubResource("AnimationLibrary_7kejg")
}

[connection signal="body_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_exited" from="." to="." method="_on_area_exited"]
